@@ -3,9 +3,13 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance.
 ============================================================================
+6/29/20: Fixed multi-hole combiner for case where there is a handedness
+changes between stage and image shift coordinate systems and made it try to
+avoid placing a hole not to be acquired at the center of a pattern.
+
 6/25/20: Fixed crash in multishot when using custom holes.
 
-6/24/20: SEM_3-8-0beta111
+6/24/20: SEM_3-8-0beta11
 6/24/20: SEM_3-7-14
 6/24/20: Changed @ in new multishot frame file numbering scheme to - for
 compatibility with Relion.
